--- a/EcommercePlatform/src/main/resources/application.properties
+++ b/EcommercePlatform/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.jpa.database=mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
 server.servlet.session.timeout=-1
 
